force-app/main/default/objects/Case/fields/AI_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Category__c</fullName>
    <description>Case category as classified by the LLM</description>
    <label>AI Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Bug Report</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>