force-app/main/default/objects/Case/fields/AI_Classification_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Classification_Status__c</fullName>
    <description>Status of the async AI classification job for this case</description>
    <label>AI Classification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>