force-app/main/default/objects/Case/fields/AI_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Score__c</fullName>
    <description>LLM self-reported confidence in its classification (0.00 - 1.00)</description>
    <label>AI Confidence Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>