force-app/main/default/objects/Case/fields/AI_Last_Classified__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Classified__c</fullName>
    <description>Timestamp when the LLM last successfully classified this case</description>
    <label>AI Last Classified</label>
    <type>DateTime</type>
</CustomField>