force-app/main/default/objects/Case/fields/AI_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>AI_Sentiment__c</fullName>
    <description>Customer sentiment detected by the LLM</description>
    <label>AI Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Frustrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>