force-app/main/default/objects/Case/fields/AI_Suggested_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Response__c</fullName>
    <description>Draft response generated by the LLM for the agent to review and send</description>
    <label>AI Suggested Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>