force-app/main/default/objects/Case/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>Short LLM-generated summary of the case (one or two sentences)</description>
    <label>AI Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>